tweaked rss feed, locations index page css done

--- a/client/nav.less
+++ b/client/nav.less
@@ -1,3 +1,8 @@
+@import './variables.less';
+
+.snap-drawer{
+  background-color: @tray-color;
+}
 ul#navigation {
   width: 100%;
 }
@@ -5,7 +10,10 @@ ul#navigation {
   float: none;
 }
 #navigation a {
-  color: #5A965D !important;
+  color: @white !important;
+}
+.nav > li > a:hover, .nav > li > a:focus {
+  background-color: lighten(@tray-color, 7%);
 }
 .fa {
   display: inline !important;
