--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -28,7 +28,7 @@
     position: relative;
     overflow: scroll;
   }
-  .twitter h2, .rss-feed h2 {
+  h2.twitter-header, h2.rss-header {
     font-weight: @lite-wt;
     transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
@@ -40,14 +40,14 @@
     position: absolute;
     font-size: 3.5em;
   }
-  .twitter h2 {
-    bottom: -30px;
-    left: 250px;
+  h2.twitter-header {
+    top: 110px;
+    left: 60px;
     color: @lite-red;
   }
-  .rss-feed h2 {
-    bottom: -75px;
-    right: 175px;
+  h2.rss-header {
+    top: 140px;
+    left: 145px;
     color: @lite-red;
   }
 }
