--- a/client/views/locations/locations.jade
+++ b/client/views/locations/locations.jade
@@ -6,14 +6,15 @@
       #map(en-map, lat='{{pos.lat}}', lng='{{pos.lng}}', zoom=12)
   .row
     .clearfix
-      button.btn.btn-default.pull-right(ng-click="tableParams.sorting({})") Clear Sorting
+      button.btn.btn-default.pull-right.clear-btn(ng-click="tableParams.sorting({})") Clear Sorting
       button.btn.btn-default.pull-right(ng-click="tableParams.filter({})") Clear Filtering
-    table.table(ng-table='tableParams', show-filter='true')
-      tbody
-        tr(ng-repeat='loc in locs', data-lat= '{{loc.lat}}', data-lng='{{loc.lng}}', data-title='{{loc.title}}')
-          td(data-title="'Title'" filter="{ 'title': 'text' }"): a(href='/#/locations/{{loc._id}}') {{loc.title}}
-          td(data-title="'Address'") {{loc.address}}
-          td(data-title="'Type'", name="group", filter="{ 'group': 'select' }", filter-data="groups($column)"){{loc.group}}
-          td(data-title="'Distance'", sortable="'distance'") calculation here
-          td(data-title="'Popularity'", sortable="'favorites'") {{loc.favorites.length}}
+    .wrapper
+      table.table(ng-table='tableParams', show-filter='true')
+        tbody
+          tr(ng-repeat='loc in locs', data-lat= '{{loc.lat}}', data-lng='{{loc.lng}}', data-title='{{loc.title}}')
+            td(data-title="'Title'" filter="{ 'title': 'text' }"): a(href='/#/locations/{{loc._id}}') {{loc.title}}
+            td(data-title="'Address'") {{loc.address}}
+            td(data-title="'Type'", name="group", filter="{ 'group': 'select' }", filter-data="groups($column)"){{loc.group}}
+            td(data-title="'Distance'", sortable="'distance'") calculation here
+            td(data-title="'Popularity'", sortable="'favorites'") {{loc.favorites.length}}
 
