--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -10,11 +10,11 @@
     .col-xs-1
   .row.trending
     .col-xs-1
+      h2.twitter-header Twitter
     .col-xs-4.twitter
-      h2.text-center Twitter
     .col-xs-2
+      h2.rss-header RSS&nbspFeed
     .col-xs-4.rss-feed
-      h2.text-center RSS Feed
       kj-parse(feeds='feeds')
     .col-xs-1
 
