--- a/client/views/locations/locations.less
+++ b/client/views/locations/locations.less
@@ -1,8 +1,10 @@
+@import '../../variables.less';
+
 #locations {
-  margin: -100px;
+  margin: -50px;
 
   h3 {
-    font-weight: lighter;
+    font-weight: @lite-wt;
     transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
@@ -13,26 +15,35 @@
     position: relative;
     bottom: 265px;
     right: 500px;
-    font-size: 3.5em;
+    font-size: 4.5em;
+    color: @lite-red;
   }
   .find-me {
     display: inline-block;
     position: relative;
-    left: 167px;
+    left: 240px;
     margin-bottom: 5px;
   }
   .clearfix {
     margin-top: 40px;
     padding-right: 135px;
   }
+  .clear-btn {
+    margin-right: 70px;
+  }
   #map {
     margin: 0 auto !important;
     margin-top: -60px;
     padding-bottom: 60px;
-    border: 4px solid grey;
+    border: 5px solid @border;
   }
-  .table {
+  .wrapper {
     width: 1000px;
     margin: 0 auto;
+
+    thead {
+      font-size: 20px;
+      color: @dkturquiose;
+    }
   }
 }
