fixed icons on location show page, switched out images on reflections, noticed error with slider

--- a/client/variables.less
+++ b/client/variables.less
@@ -6,7 +6,7 @@
 @border: #AEDED2;
 @turquiose: #1ABC9C;
 @dkturquiose: #16A085;
-@lite-red: rgba(224, 19, 19, 0.55);
+@lite-red: #EB8595;
 @tray-color: lightcoral;
 @purple: #96418B;
 
