--- a/client/views/event/event.jade
+++ b/client/views/event/event.jade
@@ -1,16 +1,15 @@
 #events
   .row.bkgrd-img.opacity
-    h1.text-center {{title}}
-    .tag {{tag}}
+    h1.text-center {{occasion.name}}
+    .tag {{occasion.type}}
   .row
     .col-xs-1
     .col-xs-5
       article.desc
         h1 Description
-        h4 {{description}}
+        h4 {{occasion.description}}
     .col-xs-5
-      //ng-click on .rsvp
-      .rsvp
+      .rsvp(ng-click='attend()')
         .fa.fa-fw.fa-calendar.fa-5x.calendar
         h2.pull-right.rsvp-btn I will be attending this!
       section.venue
