modal popup for reflection added

--- a/client/index.jade
+++ b/client/index.jade
@@ -62,6 +62,7 @@ html(ng-app='enlighTN', lang='en')
     script(src='/views/event/event.js')
     script(src='/views/location/location.js')
     script(src='/views/locations/locations.js')
+    script(src='/views/makeReflection/makeReflection.js')
     script(src='/views/login/login.js')
     script(src='/views/logout/logout.js')
     script(src='/views/register/register.js')
