--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -5,10 +5,9 @@
     .col-xs-10.current
       .col-xs-1
       .events.col-xs-10
-        h4(ng-repeat='event in events') {{event.name}}
-          p {{event.dates.date}}
-          p {{event.dates.startTime}}
-          //THESE ^^^ dont show up :(
+        h4: a(href='/#/events/{{event._id}}', ng-repeat='event in events') {{event.name}}
+          p {{event.dates[0].date | date:'MMMM dd'}} at {{event.dates[0].startTime}}
+          br
       .col-xs-1
     .col-xs-1
   .row.trending
