reflection upvote/downvote works

--- a/client/views/location/location.jade
+++ b/client/views/location/location.jade
@@ -20,10 +20,10 @@
           slide.slide(ng-repeat='(key, value) in slides')
             .reflection(ng-repeat='reflect in value')
               h3 {{reflect.type}}
-              img.reflection-badge(src='{{reflect.img}}')
+              img.reflection-badge(ng-src='{{reflect.img}}')
               p.text-center {{reflect.user}}
               h3 {{reflect.title}}
               .think
                 p {{reflect.blurb}}
               .vote
-                a(href='javascript:void(0)', ng-click='castVote(reflect._id)'): i.fa.fa-fw.fa-5x(ng-class='{\'fa-star\': vote === true, \'fa-star-o\': vote === false}')
+                a(href='javascript:void(0)', ng-click='castVote($parent.$index, $index)'): i.fa.fa-fw.fa-5x(ng-class='{\'fa-star\': reflect.vote === true, \'fa-star-o\': reflect.vote === false}')
