added quote of the day on page load

--- a/client/index.jade
+++ b/client/index.jade
@@ -19,6 +19,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/views/location/location.css', rel='stylesheet')
     link(href='/views/locations/locations.css', rel='stylesheet')
     link(href='/views/splash/splash.css', rel='stylesheet')
+    link(href='/views/dashboard/dashboard.css', rel='stylesheet')
     link(href='/components/directives/kj-parse/kj-parse.css', rel='stylesheet')
   body
     include nav
