added paintbrush to home

--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -13,12 +13,21 @@
   height: 300px;
 
   .events {
-    padding: 0 10px;
+    padding: 20px 10px;
   }
 }
 
 .trending {
-
+  .middle {
+    overflow: visible;
+  }
+  .paint-brush {
+    color: @purple;
+    opacity: .4;
+    margin-left: 50px;
+    position: relative;
+    top: 100px;
+  }
   .twitter, .rss-feed {
     height: 300px;
     border: 5px solid @border;
