--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -6,13 +6,17 @@
       .col-xs-1
       .events.col-xs-10
         h4(ng-repeat='event in events') {{event.name}}
+          p {{event.dates.date}}
+          p {{event.dates.startTime}}
+          // this ^^^ doesnt work
       .col-xs-1
     .col-xs-1
   .row.trending
     .col-xs-1
       h2.twitter-header Twitter
     .col-xs-4.twitter
-    .col-xs-2
+    .col-xs-2.middle
+      i.fa.fa-fw.fa-paint-brush.fa-5x.paint-brush
       h2.rss-header RSS&nbspFeed
     .col-xs-4.rss-feed
       kj-parse(feeds='feeds')
