event page is laid out

--- a/client/views/event/event.jade
+++ b/client/views/event/event.jade
@@ -1,2 +1,19 @@
-h3 {{title}}
-
+#events
+  .row.bkgrd-img.opacity
+    h1.text-center {{title}}
+    .tag {{tag}}
+  .row
+    .col-xs-1
+    .col-xs-5
+      article.desc
+        h1 Description
+        h4 {{description}}
+    .col-xs-5
+      section.venue
+          h2 Location of Event Here
+      section.usersAttending
+          h3 Attending This Event
+          h4 Frank
+          h4 Jill
+          h4 Bubba
+    .col-xs-1
