--- a/client/index.jade
+++ b/client/index.jade
@@ -20,6 +20,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/views/locations/locations.css', rel='stylesheet')
     link(href='/views/splash/splash.css', rel='stylesheet')
     link(href='/views/dashboard/dashboard.css', rel='stylesheet')
+    link(href='/views/event/event.css', rel='stylesheet')
     link(href='/components/directives/kj-parse/kj-parse.css', rel='stylesheet')
   body
     include nav
