--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -1,6 +1,6 @@
 #home
-  h1 Upcoming Events
-  .row
+  .row.bkgrd-img.opacity
+    h1 Upcoming Events
     .col-xs-1
     .col-xs-10.current
       .col-xs-1
@@ -8,7 +8,6 @@
         h4(ng-repeat='event in events') {{event.name}}
           p {{event.dates.date}}
           p {{event.dates.startTime}}
-          // this ^^^ doesnt work
       .col-xs-1
     .col-xs-1
   .row.trending
