--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -1,9 +1,24 @@
 @import '../../variables.less';
 
 #home {
+  .bkgrd-img {
+    background-image: url('/assets/art.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+    margin: 0;
+    border-bottom: 3px solid @purple;
+    padding-top: 20px;
+  }
+  .opacity {
+    opacity: .4;
+    margin: 0;
+    width: 100%;
+    height: 450px;
+  }
   h1 {
     font-size: 3em;
-    color: @lite-red;
+    color: black;
     margin-left: 220px;
   }
 }
@@ -14,6 +29,7 @@
 
   .events {
     padding: 20px 10px;
+    color: black;
   }
 }
 
