most styling done

--- a/client/views/event/event.jade
+++ b/client/views/event/event.jade
@@ -9,6 +9,10 @@
         h1 Description
         h4 {{description}}
     .col-xs-5
+      //ng-click on .rsvp
+      .rsvp
+        .fa.fa-fw.fa-calendar.fa-5x.calendar
+        h2.pull-right.rsvp-btn I will be attending this!
       section.venue
           h2 Location of Event Here
       section.usersAttending
