--- a/client/views/event/event.less
+++ b/client/views/event/event.less
@@ -44,7 +44,7 @@
       line-height: 1.4em;
     }
   }
-  .venue {
+  .venue, .rsvp {
     padding: 40px;
     border: 5px solid @border;
     background-color: @white;
@@ -53,6 +53,14 @@
     h2 {
       margin-bottom: 15px;
       color: @lite-red;
+    }
+    .rsvp-btn {
+      cursor: pointer;
+    }
+    .calendar {
+      color: @purple;
+      cursor: pointer;
+      opacity: .4;
     }
   }
   .usersAttending {
