--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -8,6 +8,7 @@
         h4(ng-repeat='event in events') {{event.name}}
           p {{event.dates.date}}
           p {{event.dates.startTime}}
+          //THESE ^^^ dont show up :(
       .col-xs-1
     .col-xs-1
   .row.trending
