--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -19,13 +19,14 @@
   h1 {
     font-size: 3em;
     color: black;
-    margin-left: 220px;
+    margin-left: 10%;
   }
 }
 .current {
   border: 7px solid @border;
   background-color: @white;
   height: 300px;
+  overflow: scroll;
 
   .events {
     padding: 20px 10px;
