--- a/client/views/location/location.less
+++ b/client/views/location/location.less
@@ -41,16 +41,17 @@
     }
     #info {
       padding: 0 40px;
-      margin-top: -100px;
+      margin-top: -70px;
     }
     #description {
       padding: 60px 40px;
+      font-size: 20px;
     }
   }
   .events {
     h2 {
       color: @lite-red;
-      margin: 40px 5px 0;
+      margin: 70px 5px 0;
       font-weight: @lite-wt;
     }
     ul {
@@ -60,6 +61,7 @@
 
       li {
         font-size: 18px;
+        color: @dkturquiose;
       }
     }
   }
