--- a/client/views/location/location.jade
+++ b/client/views/location/location.jade
@@ -6,9 +6,6 @@
       li: a#comment(href='javascript:void(0)'): i.fa.fa-fw.fa-comment
     #info
       h3 {{loc.address}}
-      h4 coolwebsite.com
-      h5 Hours
-      h6 Mon- Fri 10-8
     #description
       p {{loc.description}}
   .col-xs-6.events
@@ -19,7 +16,7 @@
   .row
     #slides_control
       div
-        carousel(interval='myInterval')
+        carousel.carousel(interval='myInterval')
           slide.slide(ng-repeat='slide in slides')
             .reflection
               img.reflection-badge(src='{{slide.img}}')
