--- a/client/views/location/location.less
+++ b/client/views/location/location.less
@@ -21,7 +21,8 @@
         font-size: 2em;
       }
       li a:hover, li a:active {
-        color: lighten(@purple, 5%);
+        color: @purple;
+        opacity: .6;
         background-color: transparent;
         text-decoration: none;
         font-size: 2em;
@@ -91,6 +92,21 @@
       text-align: left;
       border-left: 1px solid #eee;
       border-right: 1px solid #eee;
+
+      .vote {
+        margin: 30px 0;
+        text-align: center;
+
+        a {
+          text-decoration: none;
+          color: @lite-red;
+        }
+        a:hover {
+          text-decoration: none;
+          color: @purple;
+          opacity: .6;
+        }
+      }
     }
     .slide {
       height: 400px;
