added a footer and copyright, tweaks

--- a/client/index.jade
+++ b/client/index.jade
@@ -33,6 +33,11 @@ html(ng-app='enlighTN', lang='en')
         .col-xs-2
       .row#container(ng-view)
 
+
+      .row#footer
+        small: i.fa.fa-fw.fa-copyright &nbsp The EnlighTN Team
+
+
     script(src='/vendor/angular/angular.js')
     script(src='/vendor/angular-route/angular-route.js')
     script(src='/vendor/jquery/dist/jquery.js')
