--- a/client/views/splash/splash.less
+++ b/client/views/splash/splash.less
@@ -32,6 +32,7 @@
       label {
         font-size: 20px;
         font-weight: @norm-wt;
+        color: @purple;
       }
     }
     .login{
@@ -49,6 +50,7 @@
       label {
         font-size: 20px;
         font-weight: @norm-wt;
+        color: @purple;
       }
     }
   }
