removed margin from row above footer

--- a/client/index.jade
+++ b/client/index.jade
@@ -34,8 +34,9 @@ html(ng-app='enlighTN', lang='en')
       .row#container(ng-view)
 
 
-      .row#footer
-        small: i.fa.fa-fw.fa-copyright &nbsp The EnlighTN Team
+      .row
+        #footer
+          small: i.fa.fa-fw.fa-copyright &nbsp The EnlighTN Team
 
 
     script(src='/vendor/angular/angular.js')
