--- a/client/views/dashboard/dashboard.less
+++ b/client/views/dashboard/dashboard.less
@@ -48,6 +48,9 @@
       color: @lite-red;
     }
   }
+  .edit:hover {
+    color: @dkturquiose;
+  }
   .reflections {
     height: 400px;
     border: 5px solid @border;
@@ -57,16 +60,21 @@
     position: relative;
     overflow: scroll;
 
+
     h1 {
       margin-bottom: 15px;
       color: @lite-red;
     }
 
-    section {
+    section, .reflect-edit-form {
       overflow: scroll;
       background-color: #eee;
       padding: 40px 60px;
       margin: 20px;
+
+      input[type='text'] {
+        width: 100%;
+      }
     }
   }
 }
