reflections edit forms work on the front end

--- a/client/views/dashboard/dashboard.less
+++ b/client/views/dashboard/dashboard.less
@@ -69,12 +69,19 @@
     section, .reflect-edit-form {
       overflow: scroll;
       background-color: #eee;
-      padding: 40px 60px;
       margin: 20px;
 
       input[type='text'] {
         width: 100%;
       }
+    }
+    .reflect-display {
+      padding: 40px 60px;
+    
+    }
+    .reflect-edit-form {
+      padding: 20px 40px;
+    
     }
   }
 }
