--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -54,21 +54,23 @@
     .col-xs-2
     .col-xs-8.reflections
       h1.text-center Your Reflections
-      section(ng-hide='showReflect')
-        i.fa.fa-pencil.fa-fw.fa-lg.edit(ng-click='toggleReflect()')
-        div
-          p.text-right October 10th, 2014
-          h3 Wise, if not slightly pedantic.
-          h4 A kidney of the match is assumed to be a kittle blow. The literature would have us believe that a brainsick spinach is not but a cancer. Some assert that a combust distributor's cannon comes with it the thought that the direst pentagon is a foam. The first cushy baboon is, in its own way, a range.
-      .reflect-edit-form(ng-show='showReflect')
-        form.form(role='form', novalidate)
-          .form-group
-            label(for='name') Title
-              input.form-control.col-xs-12(name='title', type='text', ng-model='')
-          .form-group
-            label(for='body') Body
-              textarea.form-control(name='body', type='text', ng-model='', cols='95', rows='5')
-          button.btn.btn-primary(ng-click='editReflection()') Save
-          button.btn.btn-warning.pull-right(ng-click='toggleReflect()') Back
+      section(ng-repeat='reflection in reflections')
+        .reflect-display(ng-hide='showReflect[$index]')
+          i.fa.fa-pencil.fa-fw.fa-lg.edit(ng-click='toggleReflect($index)')
+          div
+            p.text-right {{reflection.date}}
+            h3 {{reflection.title}}
+            h4 {{reflection.body}}
+        .reflect-edit-form(ng-show ='showReflect[$index]')
+          form.form(role='form', novalidate)
+            .form-group
+              label(for='name') Title
+                input.form-control.col-xs-12(name='title', type='text', ng-model='reflection.title')
+            .form-group
+              label(for='body') Body
+                textarea.form-control(name='body', type='text', cols='95', rows='5', ng-model='reflection.body')
+            button.btn.btn-primary(ng-click='editReflection($index)') Save
+            button.btn.btn-warning.pull-right(ng-click='toggleReflect($index)') Back
+
     .col-xs-2
 
