reflection form is in the modal

--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -64,7 +64,7 @@
         .reflect-edit-form.flipInX(ng-show ='showReflect[$index]')
           form.form(role='form', novalidate)
             .form-group
-              label(for='name') Title
+              label(for='title') Title
                 input.form-control.col-xs-12(name='title', type='text', ng-model='reflection.title')
             .form-group
               label(for='body') Body
