--- a/client/views/location/location.less
+++ b/client/views/location/location.less
@@ -136,3 +136,18 @@
     }
   }
 }
+
+
+.modal-header {
+  margin-left: 50px;
+}
+.modal-body {
+  padding: 50px 80px;
+
+  label {
+    font-size: 20px;
+    color: @dkturquiose;
+    letter-spacing: 1px;
+    font-weight: lighter;
+  }
+}
