--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -51,8 +51,9 @@
         .reflect-display(ng-hide='showReflect[$index]')
           i.fa.fa-pencil.fa-fw.fa-lg.edit(ng-click='toggleReflect($index)')
           div
-            p.text-right {{reflection.date | date: 'MMM d, yyyy'}}
+            p.text-right {{reflection.Date | date: 'MMM d, yyyy'}}
             h3 {{reflection.title}}
+            h4 {{reflection.loc}}
             h4 {{reflection.text}}
         .reflect-edit-form.flipInX(ng-show ='showReflect[$index]')
           form.form(role='form', novalidate)
