reconfigured show and hide on edit profile form

--- a/client/index.jade
+++ b/client/index.jade
@@ -11,7 +11,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/vendor/angular-snap/angular-snap.min.css', rel='stylesheet')
     link(href='/vendor/ng-table/ng-table.min.css', rel='stylesheet')
     link(href='/vendor/toastr/toastr.min.css', rel='stylesheet')
-    link(href='/animate/animate.min.css', rel='stylesheet')
+    link(href='/vendor/animate/animate.min.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
     link(href='/nav.css', rel='stylesheet')
     link(href='/components/directives/en-map/en-map.css', rel='stylesheet')
