--- a/client/views/dashboard/dashboard.less
+++ b/client/views/dashboard/dashboard.less
@@ -9,6 +9,7 @@
     margin: 0;
     border-bottom: 3px solid @purple;
     padding-top: 40px;
+
   }
   .quote-mark {
     color: @purple;
@@ -83,3 +84,8 @@
     }
   }
 }
+/* when hiding the picture */
+.ng-hide-add         { animation:0.5s flipInX ease; }
+
+/* when showing the picture */
+.ng-hide-remove      { animation:0.5s flipInX ease; }
