--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -9,12 +9,12 @@
         p {{quote.author}}
 
     .col-xs-4
+      i.fa.fa-pencil.fa-fw.fa-2x.pull-right.edit(ng-click='form = !form')
       .info
-        i.fa.fa-pencil.fa-fw.fa-2x.pull-right.edit(ng-click='toggleEdit()')
-        div(ng-hide='showEdit')
+        div(ng-hide='form', ng-class="{ active: form }")
           h3 {{user.name}}
           h4 {{user.email}}
-        div#editForm(ng-show='showEdit')
+        div#editForm(ng-show='form', ng-class="{ active: form }")
           form.form(role='form', novalidate)
             .form-group
               label(for='name') Name
