--- a/client/views/makeReflection/makeReflection.jade
+++ b/client/views/makeReflection/makeReflection.jade
@@ -1,14 +1,13 @@
 .modal-header
-  h1 Tell us what you think!
+  h2 Tell us what you think!
 .modal-body
   form.form(role='form', novalidate)
     .form-group
       label(for='title') Title
         input.form-control.col-xs-12(name='title', type='text', ng-model='reflection.title')
     .form-group
-      label(for='body') Body
-        textarea.form-control(name='body', type='text', cols='95', rows='5', ng-model='reflection.body')
-  h3 {{$scope.loc}}
+      label(for='body') Reflection
+        textarea.form-control(name='text', type='text', cols='95', rows='5', ng-model='reflection.text')
 .modal-footer
   button.btn.btn-primary(ng-click='ok()') Save
   button.btn.btn-warning(ng-click='cancel()') Cancel
