fixed reflection not saving

--- a/client/views/makeReflection/makeReflection.jade
+++ b/client/views/makeReflection/makeReflection.jade
@@ -9,5 +9,5 @@
       label(for='body') Reflection
         textarea.form-control(name='text', type='text', cols='95', rows='5', ng-model='reflection.text')
 .modal-footer
-  button.btn.btn-primary(ng-click='ok()') Save
+  button.btn.btn-primary(ng-click='ok(reflection)') Save
   button.btn.btn-warning(ng-click='cancel()') Cancel
