--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -26,7 +26,7 @@
   border: 7px solid @border;
   background-color: @white;
   height: 300px;
-  overflow: scroll;
+  overflow: auto;
 
   .events {
     padding: 20px 10px;
@@ -35,24 +35,14 @@
 }
 
 .trending {
-  .middle {
-    overflow: visible;
-  }
-  .paint-brush {
-    color: @purple;
-    opacity: .4;
-    margin-left: 50px;
-    position: relative;
-    top: 100px;
-  }
   .twitter, .rss-feed {
     height: 300px;
     border: 5px solid @border;
     background-color: @white;
     padding: 20px;
-    margin: 40px 0;
+    margin: 40px 10px;
     position: relative;
-    overflow: scroll;
+    overflow: auto;
   }
   h2.twitter-header, h2.rss-header {
     font-weight: @lite-wt;
@@ -67,13 +57,13 @@
     font-size: 3.5em;
   }
   h2.twitter-header {
-    top: 110px;
-    left: 60px;
+    top: 80px;
+    left: -40px;
     color: @lite-red;
   }
   h2.rss-header {
-    top: 140px;
-    left: 145px;
+    top: 80px;
+    left: -75px;
     color: @lite-red;
   }
 }
