--- a/client/views/dashboard/dashboard.less
+++ b/client/views/dashboard/dashboard.less
@@ -59,7 +59,7 @@
     padding: 20px;
     margin: 40px 10px;
     position: relative;
-    overflow: scroll;
+    overflow: auto;
 
 
     h1 {
@@ -68,7 +68,6 @@
     }
 
     section, .reflect-edit-form {
-      overflow: scroll;
       background-color: #eee;
       margin: 20px;
 
