changed location to locations in nav

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -15,4 +15,4 @@
     li
       a(href='/#/dashboard'): i.fa.fa-fw.fa-dashboard.fa-2x &nbsp dashboard
     li
-      a(href='/#/locations'): i.fa.fa-fw.fa-location-arrow.fa-2x &nbsp location
+      a(href='/#/locations'): i.fa.fa-fw.fa-location-arrow.fa-2x &nbsp locations
