--- a/client/views/dashboard/dashboard.less
+++ b/client/views/dashboard/dashboard.less
@@ -42,7 +42,7 @@
     padding: 20px;
     margin: 40px 10px;
     position: relative;
-    overflow: scroll;
+    overflow: auto;
 
     h1 {
       margin-bottom: 15px;
