--- a/client/views/locations/locations.less
+++ b/client/views/locations/locations.less
@@ -5,28 +5,21 @@
 
   h3 {
     font-weight: @lite-wt;
-    transform: rotate(270deg);
-    -webkit-transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    -o-transform: rotate(270deg);
-    -ms-transform: rotate(270deg);
-    z-index: 1000;
-    margin: 20px;
-    position: relative;
-    bottom: 265px;
-    right: 500px;
+    margin-top: 60px;
+    text-align: center;
     font-size: 4.5em;
     color: @lite-red;
   }
   .find-me {
     display: inline-block;
     position: relative;
-    left: 240px;
-    margin-bottom: 5px;
+    left: 32%;
+    margin-bottom: 10px;
+    vertical-align: text-top;
   }
   .clearfix {
     margin-top: 40px;
-    padding-right: 135px;
+    padding-right: 20%;
   }
   .clear-btn {
     margin-right: 70px;
@@ -40,6 +33,7 @@
   .wrapper {
     width: 1000px;
     margin: 0 auto;
+    margin-bottom: 70px;
 
     thead {
       font-size: 20px;
