--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -16,6 +16,7 @@
       .col-xs-3
         h2.twitter-header Twitter
       .col-xs-7
+        kj-trending
     .col-xs-5.rss-feed
       .col-xs-3
         h2.rss-header RSS&nbspFeed
