--- a/client/index.jade
+++ b/client/index.jade
@@ -11,7 +11,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/vendor/angular-snap/angular-snap.min.css', rel='stylesheet')
     link(href='/vendor/ng-table/ng-table.min.css', rel='stylesheet')
     link(href='/vendor/toastr/toastr.min.css', rel='stylesheet')
-    link(href='/vendor/animate/animate.min.css', rel='stylesheet')
+    link(href='/components/directives/kj-trending/kj-trending.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
     link(href='/nav.css', rel='stylesheet')
     link(href='/components/directives/en-map/en-map.css', rel='stylesheet')
@@ -50,10 +50,11 @@ html(ng-app='enlighTN', lang='en')
     script(src='/vendor/angular-snap/angular-snap.min.js')
     script(src='/vendor/ng-table/ng-table.min.js')
     script(src='/vendor/angular-sanitize/angular-sanitize.min.js')
+    script(src='/socket.io/socket.io.js')
     script(src='/vendor/underscore/underscore.js')
     script(src='/vendor/toastr/toastr.min.js')
     script(src='/vendor/localforage/dist/localforage.js')
-    script(src='/vendor/angular-localforage/dist/angular-localForage.js') 
+    script(src='/vendor/angular-localforage/dist/angular-localForage.js')
     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyANcr_9Ku36Y9xZ3UoISclGCKhIW7p-0bc&sensor=true&v=3&libraries=geometry')
     script(src='/index.js')
     script(src='/nav.js')
@@ -73,8 +74,8 @@ html(ng-app='enlighTN', lang='en')
     script(src='/components/factories/reflection.js')
     script(src='/components/factories/event.js')
     script(src='/components/factories/user.js')
+    script(src='/components/factories/tweets.js')
     script(src='/components/directives/en-map/en-map.js')
     script(src='/components/directives/en-locate/en-locate.js')
     script(src='/components/directives/kj-parse/kj-parse.js')
-
-
+    script(src='/components/directives/kj-trending/kj-trending.js')
