fixed padding on top bar

--- a/client/index.less
+++ b/client/index.less
@@ -27,6 +27,7 @@ body{
 .header-container {
     border-bottom: 2px solid @dkturquiose;
     background-color: @turquiose;
+    padding: 20px;
 
   .header {
     height: 150px;
