added EnlighTN to nav tray

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -9,6 +9,8 @@
 
   ul.nav.navbar-nav#navigation(ng-show='email')
     li
+      a(href=''): i.fa.fa-fw.fa-map-marker.fa-2x &nbsp &nbsp EnlighTN
+    li
       a(href='/#/home'): i.fa.fa-fw.fa-home.fa-2x &nbsp home
     li
       a(href='/#/logout'): i.fa.fa-fw.fa-sign-out.fa-2x &nbsp logout
